--- a/skupiny.html
+++ b/skupiny.html
@@ -10,8 +10,8 @@
 
 <div id="header-container"></div>
 
-<main class="content">
-  <h2>Řidičská oprávnění – skupiny</h2>
+<section class="skupiny">
+  <h2>Skupiny řidičských oprávnění</h2>
 
   <section class="skupina">
     <h3>A – Motocykly</h3>
