--- a/skupiny.html
+++ b/skupiny.html
@@ -83,9 +83,7 @@
     (Pokud má celkovou hmotnost do 3 500 kg, postačuje oprávnění skupiny B.)</p>
     <p><strong>Věk:</strong> od 17 let</p>
   </section>
-
- </section>
-
+</main>
 
 <div id="footer-container"></div>
 <script src="header.js"></script>
